<resources>
    <string name="app_name">Rice Leaf Disease Detection</string>
    <string name="app_title">Rice Leaf Disease</string>
    <string name="start_diagnosis">Start Leaf Diagnosis</string>
    <string name="choose_image">Choose an image source to detect rice leaf disease.</string>
    <string name="take_photo">Take Photo</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="instant_capture">Instant capture</string>
    <string name="from_gallery">From gallery</string>
    <string name="disease_info">Disease Info</string>
    <string name="last_result">Last Result</string>
    <string name="ai_chat">AI Chat</string>
    <string name="language">Language 🌐</string>
    <string name="image_step">📸&#10;Image</string>
    <string name="predict_step">🔍&#10;Predict</string>
    <string name="advice_step">🌾&#10;Advice</string>
    <string name="leaf_scan">Leaf Scan</string>
    <string name="preview_leaf">Preview your selected rice leaf image</string>
    <string name="change_image">Change</string>
    <string name="scan_now">Scan Now</string>
    <string name="model_predicting">Model is predicting...</string>
    <string name="prediction_result">Prediction Result</string>
    <string name="detected_disease">Detected Disease</string>
    <string name="confidence">Confidence</string>
    <string name="model">Model</string>
    <string name="inference_time">Inference Time</string>
    <string name="get_ai_advice">Get AI Advice</string>

</resources>